posiGen_FullsendBox/src/objects/System_Serialized_Item__c.object
<CustomObject>
    <fields>
        <fullName>Added_To_System_On__c</fullName>
        <label>Added To System On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_of_Ascent_Sales_Order_Line__c</fullName>
        <label>Copy of Ascent Sales Order Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_of_Ascent_Sales_Order__c</fullName>
        <label>Copy of Ascent Sales Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_FMS__c</fullName>
        <description>Tracks whether of not the item is in the Fleet Management System</description>
        <inlineHelpText>Tracks whether of not the item is in the Fleet Management System</inlineHelpText>
        <label>In FMS</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Group_from_SI__c</fullName>
        <inlineHelpText>This populates a text field here so that it&apos;s usable on rollup summaries</inlineHelpText>
        <label>Item Group from SI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocusSystemUploadFiles_LatestDPR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LocusSystemUploadFiles_LatestDPR</label>
        <referenceTo>Data_Processing_Request__c</referenceTo>
        <relationshipLabel>System Serialized Items</relationshipLabel>
        <relationshipName>System_Serialized_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocusUploadFile_CreatedOn__c</fullName>
        <formula>LocusSystemUploadFiles_LatestDPR__r.Actual_Completion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LocusUploadFile_CreatedOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Locus_Registered_Date__c</fullName>
        <description>Date registered in Locus</description>
        <label>Locus Registered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Locus_Row_Id__c</fullName>
        <description>Row ID of the uploaded Locus registration file</description>
        <inlineHelpText>Row ID of the uploaded Locus registration file</inlineHelpText>
        <label>Locus Row Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PVI_Rails_and_Panels_Left_WH_Date__c</fullName>
        <formula>System__r.Install_Project_Created_On__r.PVI_Rails_and_Panels_Left_Warehouse_Date__c</formula>
        <label>PVI Rails and Panels Left WH Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Removed_On__c</fullName>
        <label>Removed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Serialized_Item__c</fullName>
        <label>Item</label>
        <referenceTo>Serialized_Item__c</referenceTo>
        <relationshipLabel>System Serialized Items</relationshipLabel>
        <relationshipName>System_Serialized_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <referenceTo>Systems__c</referenceTo>
        <relationshipLabel>Serialized Items</relationshipLabel>
        <relationshipName>System_Serialized_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TmpUploadQSSOItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TmpUploadQSSOItem From</label>
        <referenceTo>TmpUploadQSSOItem__c</referenceTo>
        <relationshipLabel>System Serialized Items</relationshipLabel>
        <relationshipName>System_Serialized_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>System Serialized Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Serialized_Item__c</columns>
        <columns>Quantity__c</columns>
        <columns>System__c</columns>
        <columns>NAME</columns>
        <columns>Serial_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Silfab</fullName>
        <columns>Serialized_Item__c</columns>
        <columns>Quantity__c</columns>
        <columns>System__c</columns>
        <columns>NAME</columns>
        <columns>Serial_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Serialized_Item__c</field>
            <operation>contains</operation>
            <value>sla</value>
        </filters>
        <label>Silfab</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>System Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Serialized Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>